## Process this file with automake to produce Makefile.in

##  NOTE: SLang support has been disabled for now.
##        Nobody has been maintaining SLang, and as far
##        as we know, nobody is using it.  
##
##        We left the code intact in case someone should
##        want to revive SLang support at a later date, but
##        for the time being, it is disabled.
##
##        If you'd like to revive SLang support, please 
##        bring this to our attention on the LINUX5250
##        mailing list.
##        http://lists.midrange.com/mailman/listinfo/linux5250
##

EXTRA_DIST=slangterm.c slangterm.h

## bin_PROGRAMS =		tn5250-slang
## 
## LDADD = ../lib5250/lib5250.la
## 
## tn5250_slang_SOURCES = tn5250.c slangterm.c
## 
## tn5250_slang_CFLAGS = -DUSE_SLANG $(AM_CFLAGS)
## 
## tn5250_slang_LDFLAGS = $(SLANG_LIB)
## 
## pkginclude_HEADERS = 	slangterm.h
## 
## INCLUDES = -DSYSCONFDIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib5250
